src/tests/snapshots/gitu__tests__show_refs__show_refs_rename_selected_branch.snap
---
source: src/tests/mod.rs
assertion_line: 372
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  feature-renamed add initial-file                                      b66a0bf|
 * main add initial-file                                                 b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD add initial-file                                          b66a0bf|
   origin/main add initial-file                                          b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -m feature-a feature-renamed                                       |
styles_hash: aab4cbe0c9988cfa
