src/tests/snapshots/gitu__tests__show_refs__show_refs_unmark_all_delete_marks_prompt.snap
---
source: src/tests/mod.rs
assertion_line: 434
expression: ctx.redact_buffer()
---
 Branches                                                                       |
D  feature-a merged add initial-file                                     b66a0bf|
▌* main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Really unmark all branches? (y or n) › █                                      |
styles_hash: c2558b0ca7f7b625
