src/tests/snapshots/gitu__tests__show_refs__show_refs_unmark_branch_for_delete.snap
---
source: src/tests/mod.rs
assertion_line: 404
expression: ctx.redact_buffer()
---
 Branches                                                                       |
   feature-a merged add initial-file                                     b66a0bf|
▌* main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 40b4853e40f4f3db
