src/tests/snapshots/gitu__tests__show_refs__show_refs_unmark_selected_branches_for_delete.snap
---
source: src/tests/mod.rs
assertion_line: 420
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌  feature-a merged add initial-file                                     b66a0bf|
   feature-b merged add initial-file                                     b66a0bf|
 * main merged add initial-file                                          b66a0bf|
                                                                                |
 Remote origin                                                                  |
   origin/HEAD merged add initial-file                                   b66a0bf|
   origin/main merged add initial-file                                   b66a0bf|
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 644b4657c1bbb2ae
